@@ -34,7 +34,7 @@ public class Client {
     public static Testable createTestObject() {
         try {
             Class testObjectClass = Class.forName("TestObject");
-            return (Testable) testObjectClass.newInstance();
+            return (Testable) testObjectClass.getDeclaredConstructor().newInstance();
         } catch (Exception ex) {
             throw new RuntimeException("Couldn't create TestObject", ex);
         }
