@@ -317,7 +317,7 @@ public class Util {
         }
 
         try {
-            return loadDelegateClass(className).newInstance();
+            return loadDelegateClass(className).getDeclaredConstructor().newInstance();
         } catch (ClassNotFoundException ex) {
             INITIALIZE exc = new INITIALIZE("Cannot instantiate " + className);
             exc.initCause(ex);
